syntax = "proto3";

option go_package = "case-studies/grpc/cmd/helloworld";

package helloworld;

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}
